@@ -6,10 +6,12 @@ DIST gitlab-workhorse-1.3.0.tar.bz2 384385 SHA256 b0acbd61a7ccf37512b569dc50625f
 DIST gitlab-workhorse-1.4.2.tar.bz2 625125 SHA256 4df4d93bc59102c312ad2a642d7f1ca463357c60d440a11fa72cfcbd4363a8e6 SHA512 1fa23991b463136565185982c1d10d17ecccd44f18138dc27cd0ef8ba0c63abc84347475d295fb71de9aaf8ad3de5747bb656c53c87769d3bce5db67571f89e2 WHIRLPOOL 3e5f2d311d96124546492d3b1da0740e70b8418f3a58f2dae2d457fb15a61d3ebdceea0e67c5a474a00ad7ac67575931a9d6ec8a4cc74572bc5549783b76304d
 DIST gitlab-workhorse-1.4.3.tar.bz2 655746 SHA256 5b621887aa8b6c0cb1b5b1aae6edd4d4cc60de77ef70f263a5968e56899da9ca SHA512 bdf62b8d5925fb45d439d2b9caf4cd2c175129bc3fe3bc24b8914dd128c1b6fc8ed700ad20513ee272e24698964c2daa7657e7bae86d58ae53cbe0e7ef44b89f WHIRLPOOL 507ba152b90db9b9459ef3f939780d39e7af17c6f2081a53c9affe621e4c624c46259993a6d94b218b476a2908ee9e3ff882f27c4d8f29e5ebc98f9bc4d878a7
 DIST gitlab-workhorse-2.0.0.tar.bz2 656360 SHA256 4e9864b7885b1102d9eb18e9c4bd3baf6021b4d3b64adbf5e9ba70b49aea8d8b SHA512 f439affafc54a090f105897de3ee5fcf2864c26dfd5f87299097c6827b9563f5ec0f7ebc9b1abfc90d6f88f864a640620c58b8a004aa230789ea5e27cf3a2e4c WHIRLPOOL a8488fcb95d06f88eef01e7d1f045fcab766c439738e44fb523b5198d29531b230bd8a1ac27e53fc668a0ba034773cf44477fce623489afe268be9b110ad04f3
+DIST gitlab-workhorse-2.1.1.tar.bz2 658851 SHA256 ab827cfa89f5d3e711357a0317a022b4d5db4d91c01ad0b80b56120e315da899 SHA512 6a316647faff83352c344cc36ef7fbaf327dfab9b8f893c39e22d4cde7e78fe703680d2851663953ee94b3ac9f55a142b5380ed23f26a7600044a3af2fdea08f WHIRLPOOL abded7f69b1a1ddc1aed3f8a8b1ddae89aa19eaa67ac1be1847f3ad6a0f5a23142f60fee545a358ecf27f2b15d4630eb42ea0b68a7076af9e26ee36d9db1243e
 EBUILD gitlab-workhorse-1.2.1-r1.ebuild 1019 SHA256 59a9b9fef8350811a1ebeb8824b8bacdfc2c145b88367841c82fe327729b63a2 SHA512 e708d5bc395b4eb8760ba218559e65059dcb499ebc45b33360da2b4b738f51fbb81ad1a2f6eb909d0d40025b45faf4c3be8fb84c945f231de0c635c2770bdbc2 WHIRLPOOL b536bb41b413beb5af648e406dc285c2e8d8b2dc8fd2803296753734feca0856219f560817c58c538b0207c4392e3c73142a8c701646033af9218023c1ca7471
 EBUILD gitlab-workhorse-1.3.0-r1.ebuild 1019 SHA256 c89fb85c3f9be066b78dc3eb7eeff6b2a93e5036e526688fe19bfa7c4242795b SHA512 69db5fd2700f3ff5ee8513c60d3a704b7de82757f2c3e8d8162606873aeec05655a30169ce53ca036d52e71507f4d1e39ca1f7520abba3bd9955c5d2408d8a7f WHIRLPOOL 96890317f566dc9775eeb85d231ed92a65979d12adb8dace28bcd52bd1b0e3d5ff3acb852def13edd0d8e797922e82d0fb20b41112933496216578ab92417f97
 EBUILD gitlab-workhorse-1.4.2.ebuild 1019 SHA256 12e00f04075eb815e41640f4ca906ce1aaa833104e79c43f19c1a34c4454ce2c SHA512 8b430448c28ea695502f08928626f628657d58582439c3458370a56dc134c108c24f266a3fe2353b1ecd5082d2e53b985fa998b8919b60f81836579c884555e3 WHIRLPOOL ff37a454aa77734d4cd15b6bc4181a5dc8f1ead2d03710fdc59a514cbaa0a67202ded330021f2c6f763797763b8de94e2ffe86c90cba2336903479abcdfc3437
 EBUILD gitlab-workhorse-1.4.3.ebuild 1019 SHA256 9f04f9b9a1af3b6a14af32fc27143ef98cf8d5ea297c754e2af2f75faab90cf9 SHA512 f38aee3ae9318d4db08a6f5bf55a7d25944ca65d132f23e5638e670a31745381d93a39d9489409ee75de943edf80af555638b2748d3eb7b1b8b0d65d8c02d6e7 WHIRLPOOL 60491062d73591e137a7a6d6875174a7f7c31c6972d104c2dd856ef8513276617e1be97f18679853b86638d92ba87152ca5b3f17c43dee79db2918e3e3139584
 EBUILD gitlab-workhorse-2.0.0.ebuild 1019 SHA256 6b5b1af7f4bb91d6f38b5160ea4a1711392ba42ae296388c72ceeb1e19dabf99 SHA512 aa607720a13052e2fa5e086d3f5fa2bac42dc9a1028940c6c42e9307596439bb89f6405d23a8f2c216ff9a15e2d83be373adddb6598ed84b7b00af872cd8efc3 WHIRLPOOL 9cd700793dbad67c8a88bf7794bc1273e809b8435702c4359b12c25006fa1a08c8d5963ab76ac75bd46d520442b3195a79659718f8c7bca49d7fb5b4c0d9d6b1
-MISC ChangeLog 6613 SHA256 cb006b86036d17d1a77bd16ee43b701a4bcb245851299fb73181e92fb10cc787 SHA512 e891fd757198a066c82a2f8843911ae836fc962d661d5d5569b82b00b9ce732f015ff5712f32c7ffe71e6ed2091f376ec621cbdfca21d5d0e7e6f85db3be49d1 WHIRLPOOL a6f6b6d975f2d0f73ff17de76c82166a5f106ab869ea15ebd31f15fd4161121c18dd4a1b216884a66e76a2bcf05083d8d6d3105b4c0dcd7dbc13c631a9c0922d
+EBUILD gitlab-workhorse-2.1.1.ebuild 1019 SHA256 0b119e55032bf471921e9011cb3a119b45a78000eae87d9ef28b2c314e302793 SHA512 aa571922dec9bf71d48b0ab23356642bf031328fc18c99600221fff5931259a2127e50432e1fd30c8656dec2ec8fa395d8e15c34f65f2a005c08420f26bcf54b WHIRLPOOL daa44b0fc118f2c05b38ddaf96c78aee1a25993c35ec5a71f4647d95ccfc8cd20362de9e6c9331d531ecd81799733953aef4297c1350d4fd223d9b003e75ab04
+MISC ChangeLog 6789 SHA256 0f6613ab749ffff732ad14c785ea241c97f720432321b4782fff9379069cef6f SHA512 bae43d5adf2bd49267defb7ea73a44d3320e908d5dd7dc56a44e49960721910f95c84981eb9bc06001feb5931a35c8abd57677de2864be956a0b95e6631527a2 WHIRLPOOL a3d92b6c75517314444be3a13364dd3637ff68600fe7e97820da8ccd95a2506eb7e098931018bdad8996ee5f40ff70ba935ddd35b42846df519f31ed87e5b1d8
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
