@@ -1,3 +1,9 @@
+*gitlab-workhorse-2.1.1 (17 Jun 2017)
+
+  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-workhorse-2.1.1.ebuild:
+  www-servers/gitlab-workhorse:  Add version 2.1.1
+
 *gitlab-workhorse-1.2.1-r1 (29 Mar 2017)
 *gitlab-workhorse-1.3.0-r1 (29 Mar 2017)
 *gitlab-workhorse-1.4.1-r1 (29 Mar 2017)
